--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             />
             <h3 class="team-title subtitle">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
-            <ul class="list team-contacts">
+            <!-- <ul class="list team-contacts">
               <li>
                 <a href="" class="link team-contact-link">Instagram</a>
               </li>
@@ -168,7 +168,7 @@
               <li>
                 <a href="" class="link team-contact-link">LinkedIn</a>
               </li>
-            </ul>
+            </ul> -->
           </li>
           <li class="team-list-item">
             <img
@@ -180,7 +180,7 @@
             />
             <h3 class="team-title subtitle">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
-            <ul class="list team-contacts">
+            <!-- <ul class="list team-contacts">
               <li>
                 <a href="" class="link team-contact-link">Instagram</a>
               </li>
@@ -193,7 +193,7 @@
               <li>
                 <a href="" class="link team-contact-link">LinkedIn</a>
               </li>
-            </ul>
+            </ul> -->
           </li>
           <li class="team-list-item">
             <img
@@ -205,7 +205,7 @@
             />
             <h3 class="team-title subtitle">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
-            <ul class="list team-contacts">
+            <!-- <ul class="list team-contacts">
               <li>
                 <a href="" class="link team-contact-link">Instagram</a>
               </li>
@@ -218,7 +218,7 @@
               <li>
                 <a href="" class="link team-contact-link">LinkedIn</a>
               </li>
-            </ul>
+            </ul> -->
           </li>
           <li class="team-list-item">
             <img
@@ -230,7 +230,7 @@
             />
             <h3 class="team-title subtitle">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
-            <ul class="list team-contacts">
+            <!-- <ul class="list team-contacts">
               <li>
                 <a href="" class="link team-contact-link">Instagram</a>
               </li>
@@ -243,7 +243,7 @@
               <li>
                 <a href="" class="link team-contact-link">LinkedIn</a>
               </li>
-            </ul>
+            </ul> -->
           </li>
         </ul>
       </section>
